--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,8 @@ build:
   project: WebAPI.OutputCache.Redis.sln       
   verbosity: minimal
 
+test: off
+
 deploy:
   - provider: Environment
     name: Etch-MyGet
