--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ after_build:
   - cmd: nuget pack %APPVEYOR_BUILD_FOLDER%\WebAPI.OutputCache.Redis\WebAPI.OutputCache.Redis.nuspec -version %APPVEYOR_BUILD_VERSION%
 
 artifacts:
-  - path: WebAPI.OutputCache.Redis\WebAPI.OutputCache.Redis.nupkg
+  - path: WebAPI.OutputCache.Redis\WebAPI.OutputCache.Redis*.nupkg
     name: WebAPI.OutputCache.Redis
 
 test: off
