--- a/WebAPI.OutputCache.Redis/packages.config
+++ b/WebAPI.OutputCache.Redis/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
   <package id="Pipelines.Sockets.Unofficial" version="2.0.22" targetFramework="net462" />
   <package id="Sigil" version="4.5.0" targetFramework="net462" />
